--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pasha-portfolio-site",
   "version": "0.1.0",
+  "homepage": "https://gitname.github.io/pasha-portfolio-site",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
