--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pasha-portfolio-site",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/pasha-portfolio-site",
+  "homepage": "https://pasha-log.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
